[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game/Goalie/Goalie.gd" type="Script" id=1]
[ext_resource path="res://Game/Goalie/GoalieDefault.png" type="Texture" id=2]
[ext_resource path="res://Game/RedPlayer.tres" type="Material" id=3]
[ext_resource path="res://Game/Shadow.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/shadow_color = Color( 0, 0, 0, 0.176471 )
shader_param/amount = 40

[sub_resource type="CapsuleShape2D" id=2]
radius = 1.60129
height = 2.79743

[sub_resource type="CapsuleShape2D" id=3]
radius = 1.0
height = 4.0

[node name="GoalieContainer" type="Node2D"]
position = Vector2( 0, -24 )
scale = Vector2( 6, 6 )
script = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -10 )

[node name="OnionLine" type="Node2D" parent="."]
z_index = 1

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Goalie" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Sprite" type="Sprite" parent="Goalie"]
material = ExtResource( 3 )
position = Vector2( 0, -6 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="Goalie"]
material = SubResource( 1 )
position = Vector2( 0, 14 )
texture = ExtResource( 2 )
flip_v = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Goalie"]
position = Vector2( 6, -8 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Goalie"]
position = Vector2( -6, -8 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goalie"]
position = Vector2( 0, 3 )
rotation = 1.5708
shape = SubResource( 3 )
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
